Fix Controls padding on small screen portrait

--- a/app/sententiae/css/styles.css
+++ b/app/sententiae/css/styles.css
@@ -202,6 +202,7 @@ h2, .h2 {
     flex-shrink: 0;
     order: 2;
     margin-bottom: 15px;
+    padding: 0 20px;
     -webkit-flex-shrink: 0;
     -webkit-order: 2;
   }
